# reversi

./: .gitignore  CMakeLists.txt  CursesGrid.cpp  CursesGrid.h  FieldList.h  FieldValue.h  GameHandler.cpp  GameHandler.h  LICENSE  Pos_Vect.h  QuadraticBoard.h  README.md  Reversi.cpp  Reversi.h  TerminalWindow.cpp  TerminalWindow.h  main.cpp
doc/: Doxyfile.in
